# OS_BSU

Channel/: buffered_channel.h
Console/: ConsoleApplication1.cpp  script.ps1
Console/Vector/: Vector.cpp  Vector.h
oS_linux/Number/: CMakeLists.txt
oS_linux/Vector/: CMakeLists.txt  Vector.h
oS_linux/consoleApp/: CMakeLists.txt
